--- a/WebApplication-homework-grupp1/WebApplication-homework-grupp1.csproj
+++ b/WebApplication-homework-grupp1/WebApplication-homework-grupp1.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>WebApplication_homework_grupp1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
 </Project>
