La till klasser i Data/Services och Dates för att hämta ner API information.

--- a/WebApplication-homework-grupp1/appsettings.json
+++ b/WebApplication-homework-grupp1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SkattApi": {
+    "BaseURL": "https://transportstyrelsen.entryscape.net/rowstore/dataset/42c48f61-274e-422f-afec-c76a6938f8c8?"
+  }
 }
